// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuggest is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: unchanged.
    </p>
  </div>,
]
`;

exports[`EuiSuggest options common 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: unchanged.
    </p>
  </div>,
]
`;

exports[`EuiSuggest options standard 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: unchanged.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props append 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiFormControlLayout__append"
            >
              Appended
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: unchanged.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props status status: loading is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch-isLoading euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiLoadingSpinner euiLoadingSpinner--medium"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: loading.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props status status: saved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="success"
                data-euiicon-type="checkInCircleFilled"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: saved.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props status status: unchanged is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: unchanged.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props status status: unsaved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="accent"
                data-euiicon-type="dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: unsaved.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: loading is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch-isLoading euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiLoadingSpinner euiLoadingSpinner--medium"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: loading.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: saved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="success"
                data-euiicon-type="checkInCircleFilled"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: saved.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: unchanged is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: unchanged.
    </p>
  </div>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: unsaved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiInputPopover euiInputPopover--fullWidth"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="accent"
                data-euiicon-type="dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id"
    >
      State: unsaved.
    </p>
  </div>,
]
`;
